--- a/NewsReactiveApi/SupportingFiles/Storyboards/News.storyboard
+++ b/NewsReactiveApi/SupportingFiles/Storyboards/News.storyboard
@@ -20,7 +20,8 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="rMc-Wn-gu4">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <color key="sectionIndexBackgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -47,68 +48,102 @@
             <objects>
                 <viewController storyboardIdentifier="ArticleDetailViewController" id="Lan-yd-RLi" customClass="ArticleDetailViewController" customModule="NewsReactiveApi" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tIJ-mR-dWZ">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="767"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="e31-Zi-iVs">
-                                <rect key="frame" x="0.0" y="20" width="375" height="267"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AyT-yb-GRh">
-                                <rect key="frame" x="16" y="302" width="343" height="30"/>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
-                                <state key="normal" title="URL">
-                                    <color key="titleColor" red="0.31393634180486585" green="0.38567110924188408" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                </state>
-                                <connections>
-                                    <action selector="visitWebSiteTap:" destination="Lan-yd-RLi" eventType="touchUpInside" id="nHn-2B-LD9"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3yS-DR-XEn">
-                                <rect key="frame" x="16" y="347" width="343" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VIp-p8-GqE">
+                                <rect key="frame" x="0.0" y="20" width="375" height="747"/>
+                                <subviews>
+                                    <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="osV-KB-1Wy">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="480"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="e31-Zi-iVs">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="345"/>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1wq-7L-gh9">
+                                                <rect key="frame" x="15" y="358" width="345" height="21.5"/>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3yS-DR-XEn">
+                                                <rect key="frame" x="15" y="395" width="345" height="18"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                                <size key="shadowOffset" width="0.0" height="0.0"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Source" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QFE-Be-3Ve">
+                                                <rect key="frame" x="30" y="438" width="46" height="17"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="46" id="lvB-Ew-DPV"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="italicSystem" pointSize="14"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AyT-yb-GRh">
+                                                <rect key="frame" x="86" y="432" width="259" height="29"/>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                                                <state key="normal" title="URL">
+                                                    <color key="titleColor" red="0.31393634180486585" green="0.38567110924188408" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="visitWebSiteTap:" destination="Lan-yd-RLi" eventType="touchUpInside" id="nHn-2B-LD9"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="3yS-DR-XEn" firstAttribute="leading" secondItem="1wq-7L-gh9" secondAttribute="leading" id="6vy-54-FDe"/>
+                                            <constraint firstItem="AyT-yb-GRh" firstAttribute="trailing" secondItem="3yS-DR-XEn" secondAttribute="trailing" constant="-15" id="8fv-J3-xFP"/>
+                                            <constraint firstItem="1wq-7L-gh9" firstAttribute="leading" secondItem="osV-KB-1Wy" secondAttribute="leading" constant="15" id="L3k-T3-ufB"/>
+                                            <constraint firstAttribute="bottom" secondItem="QFE-Be-3Ve" secondAttribute="bottom" constant="25" id="PBU-CG-cwM"/>
+                                            <constraint firstAttribute="trailing" secondItem="e31-Zi-iVs" secondAttribute="trailing" id="UdT-Qs-mu7"/>
+                                            <constraint firstItem="QFE-Be-3Ve" firstAttribute="leading" secondItem="3yS-DR-XEn" secondAttribute="leading" constant="15" id="Z27-Gp-i1V"/>
+                                            <constraint firstItem="QFE-Be-3Ve" firstAttribute="top" secondItem="3yS-DR-XEn" secondAttribute="bottom" constant="25" id="dTh-aH-ZH8"/>
+                                            <constraint firstAttribute="trailing" secondItem="1wq-7L-gh9" secondAttribute="trailing" constant="15" id="fZF-Rd-O3U"/>
+                                            <constraint firstItem="e31-Zi-iVs" firstAttribute="top" secondItem="osV-KB-1Wy" secondAttribute="top" id="hRO-yw-5R4"/>
+                                            <constraint firstItem="1wq-7L-gh9" firstAttribute="top" secondItem="e31-Zi-iVs" secondAttribute="bottom" constant="13" id="oB8-hz-96d"/>
+                                            <constraint firstItem="e31-Zi-iVs" firstAttribute="leading" secondItem="osV-KB-1Wy" secondAttribute="leading" id="rdD-KO-gJG"/>
+                                            <constraint firstItem="3yS-DR-XEn" firstAttribute="top" secondItem="1wq-7L-gh9" secondAttribute="bottom" constant="15.5" id="siE-Di-EhH"/>
+                                            <constraint firstItem="AyT-yb-GRh" firstAttribute="centerY" secondItem="QFE-Be-3Ve" secondAttribute="centerY" id="xty-OL-3jO"/>
+                                            <constraint firstItem="AyT-yb-GRh" firstAttribute="leading" secondItem="QFE-Be-3Ve" secondAttribute="trailing" constant="10" id="ykF-xz-19x"/>
+                                            <constraint firstItem="3yS-DR-XEn" firstAttribute="trailing" secondItem="1wq-7L-gh9" secondAttribute="trailing" id="zCG-90-xLH"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="osV-KB-1Wy" firstAttribute="leading" secondItem="VIp-p8-GqE" secondAttribute="leading" id="11F-ao-RX2"/>
+                                    <constraint firstAttribute="trailing" secondItem="osV-KB-1Wy" secondAttribute="trailing" id="77s-Nm-tVE"/>
+                                    <constraint firstItem="osV-KB-1Wy" firstAttribute="height" secondItem="VIp-p8-GqE" secondAttribute="height" priority="250" id="7QD-WP-p9p"/>
+                                    <constraint firstItem="osV-KB-1Wy" firstAttribute="top" secondItem="VIp-p8-GqE" secondAttribute="top" id="CtN-oz-m2R"/>
+                                    <constraint firstAttribute="bottom" secondItem="osV-KB-1Wy" secondAttribute="bottom" id="T5a-7p-OV1"/>
+                                    <constraint firstItem="osV-KB-1Wy" firstAttribute="width" secondItem="VIp-p8-GqE" secondAttribute="width" id="jWf-U9-tFf"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="uHE-Qr-S20" firstAttribute="trailing" secondItem="AyT-yb-GRh" secondAttribute="trailing" constant="16" id="5Me-cU-ItN"/>
-                            <constraint firstItem="uHE-Qr-S20" firstAttribute="trailing" secondItem="3yS-DR-XEn" secondAttribute="trailing" constant="16" id="9A4-D4-qBq"/>
-                            <constraint firstItem="e31-Zi-iVs" firstAttribute="height" secondItem="tIJ-mR-dWZ" secondAttribute="height" multiplier="0.4" id="PN0-He-ccE"/>
-                            <constraint firstItem="3yS-DR-XEn" firstAttribute="leading" secondItem="uHE-Qr-S20" secondAttribute="leading" constant="16" id="Rp1-jM-rxZ"/>
-                            <constraint firstItem="e31-Zi-iVs" firstAttribute="trailing" secondItem="uHE-Qr-S20" secondAttribute="trailing" id="U5c-u1-5Br"/>
-                            <constraint firstItem="e31-Zi-iVs" firstAttribute="top" secondItem="uHE-Qr-S20" secondAttribute="top" id="ZhX-LT-yz5"/>
-                            <constraint firstItem="e31-Zi-iVs" firstAttribute="leading" secondItem="uHE-Qr-S20" secondAttribute="leading" id="i1x-FA-1v8"/>
-                            <constraint firstItem="AyT-yb-GRh" firstAttribute="leading" secondItem="uHE-Qr-S20" secondAttribute="leading" constant="16" id="jUt-xk-EZu"/>
-                            <constraint firstItem="AyT-yb-GRh" firstAttribute="top" secondItem="e31-Zi-iVs" secondAttribute="bottom" constant="15" id="nBV-u4-WYq"/>
-                            <constraint firstItem="3yS-DR-XEn" firstAttribute="top" secondItem="AyT-yb-GRh" secondAttribute="bottom" constant="15" id="wvP-iR-TNx"/>
+                            <constraint firstItem="VIp-p8-GqE" firstAttribute="leading" secondItem="uHE-Qr-S20" secondAttribute="leading" id="GCJ-dZ-jN6"/>
+                            <constraint firstItem="VIp-p8-GqE" firstAttribute="bottom" secondItem="uHE-Qr-S20" secondAttribute="bottom" id="I3D-dx-vxD"/>
+                            <constraint firstItem="e31-Zi-iVs" firstAttribute="height" secondItem="tIJ-mR-dWZ" secondAttribute="height" multiplier="0.45" id="W7Q-dH-Tpn"/>
+                            <constraint firstItem="VIp-p8-GqE" firstAttribute="trailing" secondItem="uHE-Qr-S20" secondAttribute="trailing" id="Ze0-TM-WAA"/>
+                            <constraint firstItem="VIp-p8-GqE" firstAttribute="top" secondItem="uHE-Qr-S20" secondAttribute="top" id="wEN-A7-n8G"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="uHE-Qr-S20"/>
                     </view>
+                    <size key="freeformSize" width="375" height="767"/>
                     <connections>
                         <outlet property="fullDescriptionLabel" destination="3yS-DR-XEn" id="MBC-oy-srw"/>
                         <outlet property="imageUIImage" destination="e31-Zi-iVs" id="7HU-s0-e4v"/>
+                        <outlet property="titleLabel" destination="1wq-7L-gh9" id="Zc4-Pn-k9W"/>
                         <outlet property="urlButton" destination="AyT-yb-GRh" id="WuV-bw-b0n"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ypX-Eg-D72" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2026.4000000000001" y="17.541229385307346"/>
-        </scene>
-        <!--Web View Controller-->
-        <scene sceneID="0mT-Id-ONG">
-            <objects>
-                <viewController storyboardIdentifier="WebViewController" id="IZs-X9-9za" customClass="WebViewController" customModule="NewsReactiveApi" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="N2e-uM-ROr">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="n5I-Sc-n2t"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Yv5-zb-jXe" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2724" y="23"/>
         </scene>
     </scenes>
 </document>
